@@ -45,12 +45,17 @@ apr_status_t h2_conn_run(conn_rec *c);
  */
 apr_status_t h2_conn_pre_close(struct h2_ctx *ctx, conn_rec *c);
 
-/* Initialize this child process for h2 connection work,
+/**
+ * Initialize this child process for h2 connection work,
  * to be called once during child init before multi processing
  * starts.
  */
 apr_status_t h2_conn_child_init(apr_pool_t *pool, server_rec *s);
 
+/**
+ * Child is about to be stopped, release unused resources
+ */
+void h2_conn_child_stopping(apr_pool_t *pool, int graceful);
 
 typedef enum {
     H2_MPM_UNKNOWN,
